<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Temperature monitor</string>
    <string name="title_activity_maps">Map</string>
    <string name="reconnect">reconnect</string>
    <string name="load_file">Load file</string>
    <string name="save_file">Save file</string>
    <string name="here_put_graph">Here put Graph</string>
    <string name="temperature">Temperature</string>
    <string name="menu_action_setting">setting</string>
    <string name="menu_action_reconnect">menu_action_reconnect</string>
    <string name="menu_action_save_file">menu_action_save_file</string>
    <string name="menu_action_open_file">menu_action_open_file</string>
    <string name="menu_action_about_us">menu_action_about_us</string>
    <string name="menu_action_open_bluetooth_settings">Opem bluetooth settings</string>
    <string name="action_menu_open_file">Open File d</string>
    <string name="menu_action_open_file_">Open File</string>
    <string name="menu_action_About_Us">menu_action_about_us</string>
    <string name="action_bluetooth_connection">Bluetooth Connection</string>
    <string name="action_usb_connection">Usb Connection</string>
    <string name="bluetooth_settings">Bluetooth Settings</string>
    <string name="open_file">Open File</string>
    <string name="about_us">About Us</string>
    <string name="stop_connection">Stop Connection</string>
    <string name="load_new_measurement">Load new measurement</string>
    <string name="clear_graph">Clear Graph</string>
    <string name="clear_data">Clear Data</string>
    <string name="splashScreen">splash screen image</string>
    <string name="searching_location" tools:ignore="TypographyEllipsis">Searching Location ...</string>
    <string name="go_to_connect_screen">Go to connect screen</string>
    <string name="measurement_image">measurementImage</string>
    <string name="_0_0">0.0 ℃</string>
    <string name="delete_measurement">Delete Measurement</string>
    <string name="delete_all_measurements">Delete All Measurements</string>
    <string name="manage_file">Manage File</string>
    <string name="remove_measurement">Remove Measurement</string>
    <string name="delete_all_from_file">Delete all from file</string>
    <string name="delete_one_entry_from_file">Delete one entry from file</string>
    <string name="next_screen">Next Screen</string>
</resources>
