<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_usb"
        android:title="@string/action_usb_connection"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_bluetooth"
        android:title="@string/action_bluetooth_connection"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_open_bluetooth_settings"
        android:title="@string/bluetooth_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_save_file"
        android:title="@string/save_file"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_open_file"
        android:title="@string/open_file"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about_us"
        android:title="@string/about_us"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_stop"
        android:title="@string/stop_connection"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_open_measurement"
        android:title="@string/load_new_measurement"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_graph"
        android:title="@string/clear_graph"
        app:showAsAction="never" />
</menu>